@@ -1,0 +1,2 @@
+Add tests for all diagnostic messages on all perl versions
+Keep up to date with new versions
